Make Accept-Language header nullable with default value
